--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -466,7 +466,7 @@
         }
 
         .cart-items {
-          height: 70vh;
+          height: 60vh;
           padding-top: 20px;
           overflow: hidden;
           &.scrollY {
@@ -633,7 +633,7 @@
         }
 
         .cart-footer {
-          height: 25vh;
+          height: 30vh;
           justify-self: flex-end;
           padding-top: 20px;
 
